# hyp3-event-monitoring

./: CHANGELOG.md  README.md  cloudformation.yml  environment.yml  pyproject.toml  requirements-all.txt  requirements-api.txt  requirements-find-new.txt  requirements-harvest-products.txt  ruff.toml
.github/: pull_request_template.md
.github/workflows/: deploy.yml  release-template-comment.yml  release.yml  static-analysis.yml  test.yml
api/: cloudformation.yml  requirements.txt
api/src/: api.py
database/: database.py  setup.py
database/database/: database.py
find_new/: cloudformation.yml  requirements.txt
find_new/src/: find_new.py
harvest_products/: cloudformation.yml  requirements.txt
harvest_products/src/: harvest_products.py
models/: setup.py
models/models/: models.py
tests/: cfg.env  conftest.py  test_api.py  test_database.py  test_find_new.py  test_harvest_products.py  test_models.py
watcher/: cloudformation.yml  requirements.txt
watcher/src/: find_new.py  main.py  nearest_neighbor.py  update_products.py  util.py
watcher/src/tests/: test_find_new.py
watcher/tests/: cfg.env  conftest.py  test_find_new.py
